--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Compiler files
 cache/
 out/
+zkout/
 
 # Ignores development broadcast logs
 !/broadcast
+broadcast/*
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 
@@ -12,3 +14,8 @@ docs/
 
 # Dotenv file
 .env
+
+# scripts
+arb.sh
+
+foundry.toml
