--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ out = "out"
 libs = ["lib"]
 remappings = [
     '@account-abstraction/contracts/=lib/account-abstraction/contracts/',
+    '@openzeppelin-contracts/contracts/=lib/openzeppelin-contracts/contracts/',
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
