--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = [
+    'forge-std/=lib/forge-std/src/',
     '@account-abstraction/contracts/=lib/account-abstraction/contracts/',
     '@openzeppelin-contracts/contracts/=lib/openzeppelin-contracts/contracts/',
 ]
