--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,7 @@ remappings = [
     'forge-std/=lib/forge-std/src/',
     '@account-abstraction/contracts/=lib/account-abstraction/contracts/',
     '@openzeppelin-contracts/contracts/=lib/openzeppelin-contracts/contracts/',
+    '@foundry-era-contracts/=lib/foundry-era-contracts/src/',
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
